[tool.poetry]
name = "task"
version = "0.1.0"
description = "this is my project"
authors = ["Sarita <s09299790@gmail.com>"]
readme = "README.md"
packages = [{include = "task"}]

[tool.poetry.dependencies]
python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

